css/style.css
/* ... */
.btn-white {
  color: #0089c8;
  background-color: #ffffff; }

.btn-transparent {
  color: #ffffff;
  background-color: transparent;
  border: 2px solid #0089c8; }

.btn-primary {
  background-color: #0089c8; }

.box {
  position: relative;
  background-color: #ffffff;
  -webkit-box-shadow: 1px 1px 5px 0px rgba(128, 128, 128, 0.67);
  box-shadow: 1px 1px 5px 0px rgba(128, 128, 128, 0.67); }
  .box__title {
    color: #0089c8;
    font-size: 19px;
    font-weight: 400;
    text-transform: uppercase;
    text-align: center;
    border-bottom: 2px solid #0089c8; }
  .box__bus {
    position: absolute;
    bottom: 10px;
    right: 10px;
    opacity: 0.3; }

#content {
  padding-top: 55px; }

[type="submit"] {
  position: relative;
  width: 100%;
  color: #ffffff;
  background-color: #0089c8;
  font-size: 22px;
  text-align: center;
  overflow: hidden;
  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
  -webkit-border-radius: 5px;
  border-radius: 5px;
  cursor: pointer;
  padding: 10px 30px; }

label, input, textarea {
  width: 100%;
  font-size: 1rem;
  font-weight: 300;
  line-height: 40px; }

.topheader {
  height: 30px;
  background-color: #7ecee8;
  color: #ffffff; }
  .topheader a {
    color: #ffffff; }
  .topheader i {
    font-size: 20px; }

.mainheader {
  width: 100%;
  height: 55px;
  position: absolute;
  background-color: #ffffff;
  box-shadow: 1px 1px 3px #9E9E9E;
  z-index: 4;
  -webkit-transition: all 0ms 200ms;
  -o-transition: all 0ms 200ms;
  transition: all 0ms 200ms; }
  .mainheader__fixed {
    position: fixed;
    top: 0;
    border-bottom: 0px;
    background-color: rgba(255, 255, 255, 0.94);
    -webkit-box-shadow: 1px 1px 3px #9E9E9E;
    box-shadow: 1px 1px 3px #9E9E9E;
    z-index: 4;
    -webkit-transition: all 0ms 300ms;
    -o-transition: all 0ms 300ms;
    transition: all 0ms 300ms; }

header .mobilemenu {
  display: none !important; }

.menu ul {
  margin-bottom: 0;
  padding: 0; }
  .menu ul li {
    float: left;
    margin-right: 20px; }
  .menu ul li:last-child {
    margin-right: 0px; }
  .menu ul a {
    font-size: 17px;
    color: #5c5c5d; }

.leftside {
  font-size: 16px; }

.rightside {
  font-size: 15px; }

i {
  color: #0089c8; }

.welcome {
  color: #ffffff;
  background: url("/wp-content/uploads/2018/09/welcome-bg.png");
  -webkit-background-size: cover;
  background-size: cover;
  padding: 80px 0px; }
  .welcome h1 {
    position: relative;
    color: #ffffff;
    font-size: 38px;
    line-height: 38px;
    font-weight: 300;
    margin-bottom: 40px; }
    .welcome h1 span:before {
      content: '';
      position: absolute;
      top: 0;
      left: -135px;
      width: 125px;
      height: 100%;
      background: url("/wp-content/uploads/2018/09/h1-before.png") no-repeat;
      -webkit-transform: translateY(50%);
      -ms-transform: translateY(50%);
      transform: translateY(50%); }
    .welcome h1 span:after {
      content: '';
      position: absolute;
      top: 0;
      right: -135px;
      width: 125px;
      height: 100%;
      background: url("/wp-content/uploads/2018/09/h1-after.png") no-repeat;
      -webkit-transform: translateY(50%);
      -ms-transform: translateY(50%);
      transform: translateY(50%); }
    .welcome h1 span {
      position: relative; }
  .welcome h2 {
    color: #ffffff;
    font-size: 28.5px;
    font-weight: 300; }

.booking {
  width: 100%;
  background-color: rgba(24, 136, 172, 0.7);
  -webkit-border-radius: 4px;
  border-radius: 4px;
  overflow: inherit;
  overflow-x: hidden; }

.directions {
  position: relative; }
  .directions h2 {
    position: relative;
    font-size: 44px;
    text-align: center;
    padding: 10px 15px; }
  .directions h2:before {
    content: '';
    width: 80%;
    height: 0;
    position: absolute;
    bottom: 0;
    right: 0;
    border-left: 3px solid #0089c8;
    border-bottom: 3px solid #0089c8; }
  .directions h2:after {
    content: '';
    width: 10%;
    height: 100%;
    position: absolute;
    bottom: 0;
    right: 0;
    border-right: 3px solid #0089c8;
    border-top: 3px solid #0089c8; }
  .directions .direction {
    background-color: #ffffff;
    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
    overflow: hidden; }
    .directions .direction a {
      color: #4f4f4f; }
      .directions .direction ahover {
        text-decoration: none; }
    .directions .direction__photo {
      height: 185px;
      position: relative;
      margin-bottom: 20px;
      -webkit-transition: -webkit-background-size 0.5s;
      transition: -webkit-background-size 0.5s;
      -o-transition: background-size 0.5s;
      transition: background-size 0.5s;
      transition: background-size 0.5s, -webkit-background-size 0.5s; }
    .directions .direction__title {
      width: 100%;
      position: absolute;
      bottom: 0px;
      font-size: 21px;
      color: #ffffff;
      background-color: rgba(0, 0, 0, 0.7);
      text-align: center;
      padding: 20px 0px; }
    .directions .direction__time {
      color: #4f4f4f;
      font-size: 15px;
      margin-bottom: 35px; }
    .directions .direction__hours {
      font-size: 24px;
      font-weight: 600; }
    .directions .direction__minutes {
      position: relative;
      top: -10px;
      font-size: 19px;
      font-weight: 600; }
    .directions .direction__icon i {
      position: relative;
      top: 3px;
      color: #4f4f4f;
      font-size: 24px;
      margin-right: 5px; }
    .directions .direction__price {
      color: #4f4f4f;
      font-size: 42px;
      margin-bottom: 35px; }
      .directions .direction__price span {
        font-size: 15px; }
/* ... */

